# rag-kadai

./: .gitignore  README.md  pyproject.toml
app/: chatbot.py  database.py  load_docs.py  main.py  old_prompt.py  prompt.py  rag_chain.py  test_loader.py  user_question.py  vectorstore.py
app/old/: rag_chain.py
app/rag/: load_docs.py  main_rag.py  user_question.py
data/: app.db  賃貸借契約書.txt
ui/: chat.py
